# Huffman-zip

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compress_testing.cpp  compress_testing.h  exe  huflib  main.cpp  men.cpp  rofl
lib/: codes.cpp  compress_lib.h  huffman_decoder.cpp  huffman_decoder.h  huffman_encoder.cpp  huffman_encoder.h  huffman_lib.cpp  huffman_lib.h  huffman_tree.cpp  huffman_tree.h
testing/: testing.cpp  testing.h
utility/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  file_compressor.cpp  file_decompressor.cpp  utility.cpp  utility.h
